--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -1,10 +1,10 @@
-.columns{
+.columns {
   display: grid;
   grid-template-columns: 70% 30%;
   height: 100vh;
 }
 
-.columns .chat{
+.columns .chat {
   display: flex;
   flex-direction: column;
 }
@@ -20,13 +20,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 8px;
   height: 60%;
   width: 35%;
 }
 
-.btnClose{
+.btnClose {
   position: absolute;
   top: 0;
   left: 0;
@@ -35,8 +35,8 @@
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-  .columns{
-    grid-template-columns: 100%
+  .columns {
+    grid-template-columns: 100%;
   }
 
   .outerContainer {
