--- a/client/src/components/UsersOnline/UsersOnline.css
+++ b/client/src/components/UsersOnline/UsersOnline.css
@@ -5,17 +5,18 @@
   border-bottom: 1px solid var(--white);
 }
 
-.activeContainer, .activeItem {
+.activeContainer,
+.activeItem {
   display: flex;
   align-items: center;
   margin-left: 5px;
 }
 
-.activeItem:first-child{
-  margin-left: 0
+.activeItem:first-child {
+  margin-left: 0;
 }
 
-.usersConnect{
+.usersConnect {
   padding: 0 0.8rem;
   margin-bottom: 1rem;
 }
